perf: main window

--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -11,7 +11,7 @@
 
 body {
   font-family: @font-family;
-  color: @color-primary;
+  color: var(--color-text-1);
   line-height: 1.2;
 
   .scroll-bar();
