--- a/src/renderer/components/Home/index.less
+++ b/src/renderer/components/Home/index.less
@@ -10,11 +10,46 @@
   .titlebar {
     width: 100%;
     height: 40px;
+    padding: 0 20px;
     background-color: rgb(var(--color-rgb-255));
     -webkit-app-region: drag;
+    box-sizing: border-box;
 
     display: flex;
+    justify-content: space-between;
     align-items: center;
+
+    &__logo {
+      width: 24px;
+    }
+
+    &-left,
+    &-right {
+      -webkit-app-region: no-drag;
+      display: flex;
+      align-items: center;
+    }
+
+    &-left {
+      span {
+        margin-left: 6px;
+      }
+    }
+
+    &__icon {
+      font-size: 18px;
+      color: rgb(var(--color-rgb-0));
+      cursor: pointer;
+      transition: color .25s;
+
+      &:hover {
+        color: @color-primary;
+      }
+
+      &:not(:first-child) {
+        margin-left: 8px;
+      }
+    }
   }
 
   &__content {
@@ -35,7 +70,6 @@
   }
 
   &__title {
-    color: var(--color-text-1);
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 24px;
