--- a/src/renderer/components/Home/index.less
+++ b/src/renderer/components/Home/index.less
@@ -10,7 +10,7 @@
   .titlebar {
     width: 100%;
     height: 40px;
-    padding: 0 20px;
+    padding: 0 20px 0 12px;
     background-color: rgb(var(--color-rgb-255));
     -webkit-app-region: drag;
     box-sizing: border-box;
@@ -28,6 +28,10 @@
       -webkit-app-region: no-drag;
       display: flex;
       align-items: center;
+
+      svg:not(:first-child) {
+        margin-left: 8px;
+      }
     }
 
     &-left {
@@ -46,8 +50,16 @@
         color: @color-primary;
       }
 
-      &:not(:first-child) {
-        margin-left: 8px;
+      &--svg {
+        fill: rgb(var(--color-rgb-0));
+        width: 18px;
+        height: 18px;
+        cursor: pointer;
+        transition: fill .25s;
+
+        &:hover {
+          fill: @color-primary;
+        }
       }
     }
   }
