--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -11,13 +11,14 @@
 @color-primary: rgb(var(--primary-6));
 @color-error: rgb(var(--red-5));
 @color-hover: rgba(22, 22, 22, 0.72);
-@background-color: rgba(var(--color-rgb-255), 0.9);
+@background-color: rgba(var(--color-rgb-255), 0.95);
 @borderRadius: 8px;
 
 body {
   font-family: @font-family;
   color: var(--color-text-1);
   line-height: 1.2;
+  transition: background-color .25s;
 
   .scroll-bar();
 }
