--- a/src/renderer/components/About/index.less
+++ b/src/renderer/components/About/index.less
@@ -10,4 +10,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &__content {
+    flex: 1;
+    width: 100%;
+    padding: 18px 32px;
+    box-sizing: border-box;
+
+    &-item {
+      font-size: medium;
+
+      &:not(:first-child) {
+        line-height: 1.5;
+        margin-top: 8px;
+      }
+    }
+  }
 }
